--- a/style.css
+++ b/style.css
@@ -19,6 +19,15 @@ a {
 	align-items: center;
 	justify-content: center;
 }
+
+.container .img-container{
+ margin-left: 100px;
+}
+
+.container .img-container img{
+	border-radius: 10px;
+	box-shadow: 0 0 5px 0 black;
+}
 img {
 	height: 100%;
 	width: 100%;
